# NESEmulator

./: .gitignore  CMakeLists.txt  bus.c  bus.h  cpu6502.c  cpu6502.h  emuconsts.h
NES/: emuconsts.h  nes.c  nes.h
NES/cpu/: cpu6502.c  cpu6502.h
NES/mappers/: mapper.c  mapper.h
NES/mappers/custom_mappers/: mapper_000.c  mapper_000.h  mapper_001.c  mapper_001.h  mapper_002.c  mapper_002.h  mapper_003.c  mapper_003.h  mapper_004.c  mapper_004.h
NES/memory/: bus.c  bus.h  cartridge.c  cartridge.h
NES/ppu/: ppu2C02.c  ppu2C02.h
emulator/: emulator_state.c  emulator_state.h  main.c
emulator/files/: emu_file.c  emu_file.h
emulator/title/: animation.c  animation.h  title.c  title.h
include/: pixelinator.h
